Opened 15 years ago

Closed 15 years ago

#432 closed defect (fixed)

-vcodec copy on webm produces incorrect frame rate

Reported by: gervin23 Owned by:
Priority: normal Component: avcodec
Version: git Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

using the attached blank.jpg as a starting point to loop and produce a valid webm file with a frame rate of 15, the resulting copy command will produce a file with an incorrect codec frame rate of 1000.

ffmpeg -v 9 -loglevel 99 -y -loop 1 -vframes 225 -r 15 -i blank.jpg -f webm -vcodec libvpx blank.webm

ffmpeg -v 9 -loglevel 99 -y -i blank.webm -vcodec copy -f webm blank_copy.webm

ffmpeg -v 9 -loglevel 99 -i blank_copy.webm

ffmpeg version N-32325-g6f8b1fc, Copyright (c) 2000-2011 the FFmpeg developers

built on Sep 5 2011 11:04:19 with gcc 4.5.2
configuration: --enable-gpl --enable-libfaac --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libtheora --enable-libvorbis --enable-libx264 --enable-libxvid --enable-nonfree --enable-postproc --enable-version3 --enable-x11grab --enable-libvpx --prefix=/tmp
libavutil 51. 16. 0 / 51. 16. 0
libavcodec 53. 13. 0 / 53. 13. 0
libavformat 53. 11. 0 / 53. 11. 0
libavdevice 53. 3. 0 / 53. 3. 0
libavfilter 2. 37. 0 / 2. 37. 0
libswscale 2. 1. 0 / 2. 1. 0
libpostproc 51. 2. 0 / 51. 2. 0

[matroska,webm @ 0x8ecaac0] Format matroska,webm probed with size=2048 and score=100
st:0 removing common factor 1000000 from timebase
[vp8 @ 0x8eccd60] Unsupported bit depth: 0
[matroska,webm @ 0x8ecaac0] All info found
[matroska,webm @ 0x8ecaac0] Estimating duration from bitrate, this may be inaccurate

Seems stream 0 codec frame rate differs from container frame rate: 1000.00 (1000/1) -> 15.00 (15/1)
Input #0, matroska,webm, from 'blank_copy.webm':

Duration: 00:00:14.99, start: 0.000000, bitrate: N/A

Stream #0.0, 41, 1/1000: Video: vp8, yuv420p, 640x360, 1/1000, SAR 1:1 DAR 16:9, 1k fps, 15 tbr, 1k tbn, 1k tbc (default)

At least one output file must be specified

Attachments (1)

blank.jpg (4.2 KB ) - added by gervin23 15 years ago.
a blank jpg used to create the base webm file used in the description

Download all attachments as: .zip

Change History (5)

by gervin23, 15 years ago

Attachment: blank.jpg added

a blank jpg used to create the base webm file used in the description

comment:1 by gervin23, 15 years ago

works fine in 0.8.2 release.

comment:2 by Carl Eugen Hoyos, 15 years ago

Status: newopen

Could you find the revision that introduced your problem with git bisect?

comment:3 by gervin23, 15 years ago

git bisect reveals:
[981f6fc988dc33e81566fdaf4087da3cfa3ddb04] ffmpeg: better timebase guessing for stream copy

comment:4 by Michael Niedermayer, 15 years ago

Reproduced by developer: set
Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.