matroskaenc: base default duration on avg_frame_rate if possible. Fixed Ticket432

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>